--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,7 @@ input {
   padding-left: .7rem;
   border-radius: .5rem;
   border: none;
-  width: 12.5rem;
+  width: 13rem;
   height: 2rem;
 }
 
@@ -168,11 +168,14 @@ span {
 
 /* HOME PAGE - LIBRARY */
 
+.search-title-hide {
+  display: none;
+}
+
 /* flex container */
 
 .container {
   margin: 0 auto;
-  /* border: 1px solid red; */
 }
 
 /* header */
@@ -182,7 +185,19 @@ span {
   padding: 2rem;
   padding-top: 1rem;
   margin-bottom: 0;
-  /* border: 1px solid red; */
+  animation-name: slideDown;
+  animation-duration: .7s;
+  animation-timing-function: ease-out;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-fill-mode: none;
+  -webkit-animation-name: slideDown;
+  -webkit-animation-duration: .7s;
+  -webkit-animation-timing-function: ease-out;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-direction: normal;
+  -webkit-animation-fill-mode: none;
+
 }
 
 .header .container {
@@ -210,6 +225,10 @@ span {
   margin-top: -1rem;
   height: 5rem;
   border-bottom: 9px solid var(--shade);
+  animation: fadeIn .5s normal backwards;
+  animation-iteration-count: 1;
+  animation-delay: .5s;
+
 }
 
 #search-area .container {
@@ -218,7 +237,6 @@ span {
   align-items: center;
   padding: 1rem;
   width: 100vw;
-  /* border: 1px solid red; */
 }
 
 .search-bar {
@@ -328,7 +346,6 @@ span {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid red; */
 }
 
 .footer img {
@@ -429,6 +446,7 @@ span {
 }
 
 /* bio intro section */
+/* TODO - new feature */
 
 .artist-main {
   margin: 0;
@@ -442,7 +460,7 @@ span {
 
 .bio-top {
   margin: 2rem auto;
-  /* border: 1px solid red; */
+
 }
 
 .bio-top .container {
@@ -518,13 +536,31 @@ span {
   .header-image img {
     width: 150px;
   }
+
+  .footer {
+    margin-top: -4rem;
+    bottom: -6rem;
+  }
+
+  .footer-tags {
+    margin-top: 0;
+  }
+
+  .footer p {
+    padding-top: 1.5rem;
+    font-size: 12px;
+  }
+
+  .footer img {
+    margin-top: 1.5rem;
+  }
 }
 
 /* ipad 12.9 */
 @media (max-width: 1024px) {
 
   .container {
-    margin: 0;
+    margin: 0 auto;
   }
 
   .header-title h1 {
@@ -536,7 +572,7 @@ span {
   }
 
   .custom-nav p {
-    /* ipad pro */
+
     font-size: 12px;
   }
 
@@ -548,65 +584,103 @@ span {
     width: 8rem;
   }
 
-  .main .container-2 {
-    margin-left: 4.9rem;
-  }
 }
 
 /* ipad 10" */
 
 @media (max-width: 834px) {
 
+  .header-title h1 {
+    font-size: 70px;
+  }
+
+  .container {
+    margin: 0 auto;
+    min-width: 100vw;
+
+  }
+
+  .header .container {
+    margin: -2rem;
+    padding: 1rem;
+  }
+
   .custom-nav {
-    /* display: block; */
+
     height: 4rem;
     margin: 0;
     font-size: 8px;
-    border: 1px solid red;
+    padding-top: .3rem;
   }
 
-  .custom-nav .container {
-    margin: 0;
-
+  .custom-nav p {
+    font-size: 12px;
   }
 
-  /* .container-2 {
-    margin-top: -7.3rem;
-    padding-top: -5rem;
-    padding-left: 1.3rem;
-    margin: 0;
-    border: 1px solid lightgreen;
-  } */
+  .music-search {
+    margin-top: .7rem;
+  }
 
   .search-button {
-    width: 7rem;
+    width: 6rem;
+    height: 1.2rem;
+    padding-top: 0;
+  }
+
+  .btn b {
+    font-size: 10px;
+    position: relative;
+    top: -4px;
   }
 
   input {
-    width: 7rem;
+    width: 6rem;
+    height: 1.2rem;
     font-size: 10px;
+    padding-left: .5rem;
   }
   
   .search-title {
-    height: 1.7rem;
+    height: 1rem;
+  }
+
+  .search-title p {
+    font-size: 10px;
   }
 
   .main {
     width: 100vw;
-    /* border: 1px solid red; */
     padding: 0;
     margin: 1rem 0;
   }
 
   .main .container-2 {
     width: 100vw;
-    /* padding: 1rem; */
     margin: 1rem auto;
-    /* border: 1px solid red; */
+  
   }
 
   .card {
     width: 375px !important;
+  }
+
+
+  .footer {
+    margin-top: -4rem;
+    bottom: -8rem;
+  }
+
+  .footer-tags {
+    margin-top: 0;
+  }
+
+  .footer p {
+    padding-top: 1rem;
+    font-size: 10px;
+  }
+
+  .footer img {
+    margin-top: 1rem;
   }
 }
 
@@ -614,11 +688,84 @@ span {
 
 @media (max-width: 768px) {
 
+  .custom-nav {
+
+    height: 4rem;
+    margin: 0;
+    font-size: 8px;
+    padding-top: .3rem;
+  }
+
+  .custom-nav p {
+    font-size: 9px;
+  }
+
+  .container {
+    padding: .5rem;
+  }
+
+  .music-search {
+    margin-top: .7rem;
+  }
+
+  .search-button {
+    width: 5rem;
+    height: 1.2rem;
+    padding-top: 0;
+  }
+
+  .btn b {
+    font-size: 10px;
+    position: relative;
+    top: -4px;
+  }
+
+  input {
+    width: 5rem;
+    height: 1.2rem;
+    font-size: 10px;
+  }
+  
+  .search-title {
+    height: 1rem;
+  }
+
+  .search-title p {
+    font-size: 10px;
+  }
+
+  .main {
+    width: 100vw;
+    padding: 0;
+    margin: 1rem 0;
+  }
+
   .main .container-2 {
     width: 100vw;
-    /* padding: 1rem; */
-    margin: 0 auto;
-    /* border: 1px solid red; */
+    margin: 1rem auto;
+  }
+
+  .card {
+    width: 375px !important;
+  }
+
+
+  .footer {
+    margin-top: -4rem;
+    bottom: -2rem;
+  }
+
+  .footer-tags {
+    margin-top: 0;
+  }
+
+  .footer p {
+    padding-top: 1rem;
+    font-size: 14px;
+  }
+
+  .footer img {
+    margin-top: 0;
   }
 
   .card {
@@ -626,48 +773,224 @@ span {
   }
 }
 
-@media (max-width: 690px) {
+@media (max-width: 414px) {
 
-  h1 {
-    font-size: 4rem;
+  .search-title {
+    display: none;
+  }
+  .search-title-hide {
+    display: inline;
   }
 
-  h2 {
-    font-size: 34px;
+  .search-title-hide p {
+    font-size: 10px;
+    text-align: center;
+    margin-top: -1rem;
+    color: var(--orange);
   }
 
-  h3 {
+  .header-title h1 {
     font-size: 30px;
   }
 
-  h4 {
-    font-size: 22px;
-  }
-
-  .navbar a {
+  .header-title h2 {
     font-size: 14px;
   }
 
-  .nav-left img {
-    width: 3rem;
-    /* chrome fix */
-    height: 3rem;
-    margin: .5rem 0;
+  .container {
+    margin: 0 auto;
+    min-width: 100vw;
+
+  }
+
+  .header .container {
+    margin: -2rem;
+    margin-bottom: .3rem;
+    padding: 1rem;
+  }
+
+  .header-image img {
+    width: 65px;
+    height: 65px;
+  }
+
+  .custom-nav {
+  
+    height: 3.5rem;
+    margin: 0;
+    margin-top: -2rem;
+    padding-top: .3rem;
+  }
+
+  .custom-nav p {
+    font-size: 7px;
+  }
+
+  .container {
+    padding: .5rem;
+  }
+
+  .custom-nav .container {
+    margin: 0;
+
+  }
+
+  .music-search {
+    margin-top: -.8rem;
+    padding-top: 1.5rem;
+  }
+
+  .search-button {
+    width: 8rem;
+    height: 1.2rem;
+    padding-top: 0;
+    padding-left: .63rem;
+  }
+
+  .btn b {
+    font-size: 10px;
+    position: relative;
+    top: -5px;
+  }
+
+  input {
+    width: 8rem;
+    height: 1.2rem;
+    font-size: 10px;
   }
   
-  .nav-left a {
-    font-size: 22px;
-    margin-top: 1rem;
-    margin-left: 1rem;
+  .search-title {
+    height: 1rem;
+  }
+
+  .search-title p {
+    font-size: 3px;
+  }
+
+  .main {
+    width: 100vw;
+    /* border: 1px solid red; */
+    padding: 0;
+    margin: 1rem 0;
+    margin-left: .8rem;
+    padding-bottom: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .main .container-2 {
+    width: 100vw;
+    margin: 1rem auto;
   }
 
   .card {
-    margin-left: 2rem;
-    margin-right: 2rem;
+    width: 378px !important;
   }
 
-  #password {
-    font-size: 1rem;
+
+  .footer {
+    margin-top: 0;
+    bottom: -8rem;
+  }
+
+  .footer-tags {
+    margin-top: -3rem;
+  }
+
+  .footer p {
+    font-size: 8px;
+  }
+
+  .footer img {
+    margin-top: 1rem;
+  }
+
+}
+
+@media (max-width: 375px) {
+
+  .main {
+    margin-left: .5rem;
+  }
+
+  .card {
+    width: 350px !important;
   }
 }
 
+
+@media (max-width: 320px) {
+
+  .header-title {
+    margin-top: 2rem;
+  }
+
+  .header-title h2 {
+    font-size: 12px;
+  }
+
+  .header-image img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .custom-nav .container {
+    height: 4rem;
+  }
+
+  .search-title {
+    display: none;
+  }
+
+  .search-title-hide p {
+    font-size: 8px;
+  }
+
+  .music-search {
+    margin-top: -.8rem;
+    padding-top: 1.5rem;
+  }
+
+  .search-button {
+    width: 7rem;
+    height: 1.4rem;
+    padding-top: 0;
+    padding-left: .63rem;
+  }
+
+  .btn b {
+    font-size: 9px;
+    position: relative;
+    top: -4px;
+  }
+
+  input {
+    width: 7rem;
+    height: 1.2rem;
+    font-size: 7px;
+  }
+
+  .main {
+    margin-left: .3rem;
+  }
+  
+  .card {
+    width: 301px !important;
+  }
+
+  .footer  {
+    padding-left: .2rem;
+    margin: 0 auto;
+  }
+
+  .footer-tags {
+    margin-top: -3.5rem;
+  }
+
+  .footer p {
+    font-size: 8px;
+  }
+
+  .footer img {
+    margin-top: 1rem;
+  }
+}
