--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,10 +97,9 @@ i {
 
 input {
   text-transform: capitalize; 
-  padding-left: .7rem;
+  padding-left: 1rem;
   border-radius: .5rem;
   border: none;
-  width: 13rem;
   height: 2rem;
 }
 
@@ -137,13 +136,6 @@ span {
   color: black !important;
 }
 
-.start-button {
-  border-radius: 2rem;
-  padding: 1rem 2rem;
-  width: 25%;
-  font-size: 22px;
-}
-
 .event-btn-block {
   display: block;
   background-color: var(--darker);
@@ -163,13 +155,26 @@ span {
 }
 
 .search-button {
-  width: 12.5rem;
+  width: 50%;
+  margin-right: 0;
+}
+
+.search-bar {
+  width: 50%;
+  margin-right: 1rem;
 }
 
 /* HOME PAGE - LIBRARY */
 
-.search-title-hide {
-  display: none;
+/* tag-line (new) */
+.header-tagline {
+  text-align: center;
+  letter-spacing: .3rem;
+  font-weight: 700;
+  margin: 0 auto;
+  padding: 2rem;
+  padding-bottom: 0;
+  color: var(--orange);
 }
 
 /* flex container */
@@ -222,7 +227,6 @@ span {
   background: var(--darker);
   margin: 0;
   margin-bottom: 2rem;
-  margin-top: -1rem;
   height: 5rem;
   border-bottom: 9px solid var(--shade);
   animation: fadeIn .5s normal backwards;
@@ -233,19 +237,11 @@ span {
 
 #search-area .container {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   padding: 1rem;
-  width: 100vw;
-}
-
-/* this is causing issue - why is it here? */
-/* .search-bar {
-  margin-left: 1rem;
-} */
-
-.search-title {
-  margin-top: 1rem;
+  width: 33vw;
+  /* border: 1px solid lightgreen; */
 }
 
 /* main */
@@ -256,8 +252,11 @@ span {
   padding-top: 0;
   margin-top: -1rem;
   max-width: 2400px;
-  height: 100vh;
-  /* border: 1px solid red; */
+  /* height: 100vh; */
+  animation: fadeIn .5s normal backwards;
+  animation-iteration-count: 1;
+  animation-delay: .6s;
+  
 
 }
 
@@ -550,14 +549,8 @@ span {
   .main {
     margin: 0 auto;
     /* watch it */
-    padding-left: 4.5rem;
   }
 
-  .main .container {
-    display: flex;
-    /* flex-wrap: wrap; */
-    justify-content: center;
-  }
 }
 
 /* ipad 12.9 */
@@ -582,29 +575,34 @@ span {
     width: 100px;
   }
 
+  #search-area .container {
+    width: 50vw;
+    /* border: 1px solid lightgreen; */
+  }
+
   .custom-nav p {
 
     font-size: 12px;
   }
 
   .search-button {
-    width: 8rem;
+    width: 50%;
   }
 
   input {
-    width: 8rem;
+    width: 50%;
   }
 
   .main {
     margin: 0;
+    padding: 2rem;
     /* border: 1px solid red; */
   }
 
   .card {
-    width: 420px !important;
+    width: 458px !important;
   }
   
-
 }
 
 /* ipad 10" */
@@ -644,7 +642,7 @@ span {
   }
 
   .search-button {
-    width: 7rem;
+    width: 12rem;
     height: 1.9rem;
   }
 
@@ -729,6 +727,11 @@ span {
 
   .search-button {
     width: 6rem;
+    height: 1.9rem;
+  }
+
+  .search-button {
+    width: 12rem;
     height: 1.9rem;
   }
 
@@ -875,12 +878,14 @@ span {
 
 @media (max-width: 414px) {
 
+  .header-tagline {
+    margin: 0;
+    padding: 0;
+    font-size: 14px;  
+  }
+
   .search-title {
     display: none;
-  }
-  .search-title-hide {
-    display: inline;
-    margin-top: -1rem;
   }
 
   .header-title h1 {
@@ -910,78 +915,49 @@ span {
   .custom-nav {
   
     height: 3.5rem;
-    margin: 0;
-    margin-top: -2rem;
-    padding-top: .3rem;
+    margin: 0 auto;
+    padding-top:1rem;
   }
 
   .custom-nav p {
     font-size: 7px;
   }
 
-  .container {
-    padding: .5rem;
-  }
-
-  .custom-nav .container {
+  #search-area .container {
     margin: 0 auto;
 
   }
 
-  .music-search {
-    margin-top: -.8rem;
-    padding-top: 1.5rem;
-    margin-left: .4rem;
-  }
-
   .search-button {
-    width: 12rem;
+    width: 50%;
     height: 1.8rem;
     padding-top: 0;
-    padding-left: .63rem;
   }
 
   .btn b {
     font-size: 18px;
-    position: relative;
-    top: -1px;
   }
 
   input {
-    width: 14rem;
+    width: 50%;
     height: 1.6rem;
     font-size: 10px;
   }
 
-  /* .search-bar {
-    margin-left: -1rem;
-  } */
-  
-  .search-title {
-    height: 1rem;
-  }
-
-  .search-title p {
-    font-size: 3px;
-  }
-
   .main {
-    width: 100vw;
-    /* border: 1px solid red; */
-    padding: 0;
+    border: 1px solid red;
+    padding: 1rem;
     margin: 1rem 0;
-    margin-left: .8rem;
     padding-bottom: 2rem;
     margin-bottom: 2rem;
   }
 
   .main .container-2 {
-    width: 100vw;
     margin: 1rem auto;
   }
 
   .card {
-    width: 378px !important;
+    width: 380px !important;
   }
 
 
@@ -1006,36 +982,29 @@ span {
 
 @media (max-width: 375px) {
 
-  .music-search {
-    margin-top: -.8rem;
-    padding-top: 1.5rem;
-    margin-left: .7rem;
+  .header-tagline p {
+
+    font-size: 12px;
   }
 
   .search-button {
-    width: 9rem;
+    width: 50%;
     height: 1.8rem;
     padding-top: 0;
-    padding-left: .63rem;
   }
 
   .btn b {
     font-size: 18px;
-    position: relative;
-    top: -1px;
+    letter-spacing: .3rem;
+    margin-left: .4rem;
   }
 
   input {
-    width: 8rem;
+    width: 50%;
     height: 1.6rem;
     font-size: 10px;
   }
   
-
-  .main {
-    margin-left: .5rem;
-  }
-
   .card {
     width: 350px !important;
   }
@@ -1044,6 +1013,10 @@ span {
 
 @media only screen and (max-width: 320px) and (min-width: 320px) {
 
+  .header-tagline p {
+
+    font-size: 10px;
+  }
 
   .header-title {
     margin-top: 2rem;
@@ -1061,27 +1034,6 @@ span {
   .custom-nav .container {
     height: 4rem;
     margin: 0;
-  }
-
-  .search-title {
-    display: none;
-  }
-
-  .search-title-hide {
-    margin-top: 1.5rem;
-  }
-
-  .search-title-hide p {
-    font-size: 8px;
-  }
-
-  .music-search {
-
-    height: 4rem;
-    margin: 0 -.5rem .7rem 0;
-    padding: 0;
-    padding-top: .8rem;
-    /* border: 1px solid red; */
   }
 
   .search-button {
@@ -1104,10 +1056,7 @@ span {
     font-size: 10px;
   }
 
-  .main {
-    margin-left: .3rem;
-  }
-  
+
   .card {
     width: 302px !important;
   }
